--- a/Pitch Perfect/Base.lproj/\.storyboard
+++ b/Pitch Perfect/Base.lproj/\.storyboard
@@ -18,6 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5qf-JI-IDF">
+                                <rect key="frame" x="275" y="524" width="50" height="50"/>
+                                <state key="normal" image="Stop">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopRecording:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dEp-ky-FZ5"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V3w-D8-0Oa">
                                 <rect key="frame" x="250" y="250" width="100" height="100"/>
                                 <constraints>
@@ -31,18 +40,8 @@
                                     <action selector="recordAudio:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="u2Q-bO-Ftz"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5qf-JI-IDF">
-                                <rect key="frame" x="275" y="524" width="50" height="50"/>
-                                <state key="normal" image="Stop">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="stopAudio:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="0qR-ZI-Dq8"/>
-                                    <segue destination="Wxe-qb-hME" kind="show" id="ve5-LZ-8fw"/>
-                                </connections>
-                            </button>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Recording" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGe-Ea-pdk">
-                                <rect key="frame" x="271" y="393" width="79" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recording" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uX-ym-ubU">
+                                <rect key="frame" x="279" y="383" width="79" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -50,17 +49,15 @@
                         </subviews>
                         <color key="backgroundColor" red="0.25796740253624856" green="0.39566258528956416" blue="0.64289378156565657" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="AGe-Ea-pdk" secondAttribute="centerX" constant="-18.5" id="7DW-q7-fi9"/>
                             <constraint firstAttribute="centerX" secondItem="V3w-D8-0Oa" secondAttribute="centerX" id="8Ge-jc-wrZ"/>
-                            <constraint firstAttribute="centerX" secondItem="5qf-JI-IDF" secondAttribute="centerX" id="O8R-v0-aCP"/>
-                            <constraint firstItem="AGe-Ea-pdk" firstAttribute="top" secondItem="V3w-D8-0Oa" secondAttribute="bottom" constant="43" id="So3-Js-J2t"/>
                             <constraint firstAttribute="centerY" secondItem="V3w-D8-0Oa" secondAttribute="centerY" id="UML-YM-uke"/>
-                            <constraint firstItem="5qf-JI-IDF" firstAttribute="top" secondItem="AGe-Ea-pdk" secondAttribute="bottom" constant="128" id="fnw-8d-C1I"/>
+                            <constraint firstAttribute="centerX" secondItem="7uX-ym-ubU" secondAttribute="centerX" constant="-18.5" id="bXP-tU-L78"/>
+                            <constraint firstItem="7uX-ym-ubU" firstAttribute="top" secondItem="V3w-D8-0Oa" secondAttribute="bottom" constant="33" id="hbA-GI-2lp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Record" id="RJH-hs-gmE"/>
                     <connections>
-                        <outlet property="recordingInProgress" destination="AGe-Ea-pdk" id="s48-rQ-LaS"/>
+                        <outlet property="stopButton" destination="5qf-JI-IDF" id="raH-Y7-ZST"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
